--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.21.0/mapbox-gl.js'></script>
 
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.21.0/mapbox-gl.css' rel='stylesheet' />
-    <link rel="stylesheet" href="./northbeach.css" />
+    <link rel="stylesheet" href="./other-side.css" />
 </head>
 <body>
 
@@ -22,7 +22,7 @@
         </div>
     </div>
 
-    <script src="./northbeach.js"></script>
+    <script src="./other-side.js"></script>
 
 </body>
 </html>
